syntax = "proto3";

option csharp_namespace = "Cope.SpaceRogue.Maintenance.API.Proto";

service ShipFeaturesService {
  rpc AddFeature (FeatureRequest) returns (AddedFeatureReply);
  rpc AddFeatureToShip (FeatureToShipRequest) returns (AddedFeatureReply);
  rpc GetFeatures (GetFeaturesRequest) returns (FeaturesReply);
  rpc GetFeature (FeatureIdRequest) returns (FeatureReply);
}

message GetFeaturesRequest {
	bool All = 1;
	string ShipId = 2;
}

message FeatureIdRequest {
   string FeatureId = 1;
}

message FeaturesReply {
	repeated FeatureReply Features = 1;
}

message FeatureRequest {
	string FeatureId = 1;
	string Name = 2;
	string Description = 3;
	int32 SpeedModifier = 4;
	int32 AttackModifier = 5;
	int32 DefenceModifier = 6;
	int32 SensorModifier = 7;
	int32 ShieldModifier = 8;
	int32 HullModifier = 9;
	double CapacityModifier = 10;
}

message FeatureReply {
	string FeatureId = 1;
	string Name = 2;
	string Description = 3;
	int32 SpeedModifier = 4;
	int32 AttackModifier = 5;
	int32 DefenceModifier = 6;
	int32 SensorModifier = 7;
	int32 ShieldModifier = 8;
	int32 HullModifier = 9;
	double CapacityModifier = 10;
}

message FeatureToShipRequest {
	string FeatureId = 1;
	string ShipId = 2;
}

message AddedFeatureReply {
   bool Added = 1;
   string Message = 2;
}
